--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 enableAirsim = True
-enableRealWorldExecution = True
+enableRealWorldExecution = False
 
 [AIRSIM]
-ip = 127.0.0.1
+ip = 192.168.160.1
 port = 41451
