--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ PySimpleGUI==4.32.1
 python-dateutil==2.8.2
 pytz==2022.7
 pyvjoy==1.0.1
-rdflib==6.2.0
+rdflib>=6.2.0
 requests==2.28.2
 setuptools==58.1.0
 six==1.15.0
